// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProfilePage renders correctly 1`] = `
<Page
  empty={Object {}}
  title="Profile"
>
  <Panel
    sectioned={true}
  >
    <LabelledValue
      label="Username"
      value="Lord Stark"
    />
    <LabelledValue
      label="Email Address"
      value="ned.stark@winterfell.biz"
    />
  </Panel>
  <Connect(AccessControl)
    condition={[Function]}
  >
    <Connect(AccessControl)
      condition={[Function]}
    >
      <Connect(TfaManager) />
    </Connect(AccessControl)>
    <Panel
      sectioned={true}
      title="Edit Profile"
    >
      <Connect(ReduxForm)
        onSubmit={[Function]}
      />
      <button
        onClick={[Function]}
      >
        Cause Error
      </button>
    </Panel>
    <Connect(AccessControl)
      condition={[Function]}
    >
      <Panel
        sectioned={true}
        title="Update Password"
      >
        <Connect(ReduxForm)
          onSubmit={[Function]}
        />
      </Panel>
    </Connect(AccessControl)>
  </Connect(AccessControl)>
</Page>
`;

exports[`ProfilePage renders with verify email banner 1`] = `
<Page
  empty={Object {}}
  title="Profile"
>
  <Connect(VerifyEmailBanner)
    verifying={true}
  />
  <Panel
    sectioned={true}
  >
    <LabelledValue
      label="Username"
    />
    <LabelledValue
      label="Email Address"
    />
  </Panel>
  <Connect(AccessControl)
    condition={[Function]}
  >
    <Connect(AccessControl)
      condition={[Function]}
    >
      <Connect(TfaManager) />
    </Connect(AccessControl)>
    <Panel
      sectioned={true}
      title="Edit Profile"
    >
      <Connect(ReduxForm)
        onSubmit={[Function]}
      />
      <button
        onClick={[Function]}
      >
        Cause Error
      </button>
    </Panel>
    <Connect(AccessControl)
      condition={[Function]}
    >
      <Panel
        sectioned={true}
        title="Update Password"
      >
        <Connect(ReduxForm)
          onSubmit={[Function]}
        />
      </Panel>
    </Connect(AccessControl)>
  </Connect(AccessControl)>
</Page>
`;
